--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>멋쟁이사자처럼:)</title>
+    <title>Html 연습</title>
+    <meta property="og:title" content="html og 연습" >
+    <meta property="og:description" content="Open Graph Protocol 사용하기" >
+    <meta property="og:image" content="./OHBOK.jpeg" >
 </head>
 
 <body>
 
-    <h1>모두를 위한 코딩 강의 -테킷</h1>
+    <h1>h1 해드</h1>
 
     <div>
-        <h2>멋쟁이사자처럼 스클</h2>
-        <p>멋쟁이사자처럼 스쿨이<br>여러분을 환영합니다.</p>
-        <!-- <p>임금님 귀는 당나귀 귀!</p> -->
+        <h2>h2 해드</h2>
+        <p>줄 바꿈<br> 완료.</p>
+        <!-- <p>주석!</p> -->
         <ol>
             <li><a href="https://github.com/hyun0229">git hub profile 현재 페이지</a></li>
             <li><a href="https://github.com/hyun0229" target="_blank">git hub profile 새창</a></li>
